--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <body>
     <div id="letters"></div>
-    <textarea id="textEditor"></textarea>
+    <textarea id="input" class="textEditor"></textarea>
     
     <div id="settings">
         <span>Replace on press</span>
